--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.7'
 services:
 
   motioneye:
@@ -23,8 +22,8 @@ services:
 
   zigbee2mqtt:
     container_name: zigbee2mqtt
-    image: koenkk/zigbee2mqtt:1.35.3
-    restart: unless-stopped
+    image: koenkk/zigbee2mqtt:latest
+    restart: always
     volumes:
       - ./data:/app/data
       - /run/udev:/run/udev:ro
@@ -35,3 +34,14 @@ services:
     devices:
       # Make sure this matched your adapter location
       - /dev/serial/by-id/usb-ITead_Sonoff_Zigbee_3.0_USB_Dongle_Plus_4037dbdef88bed11a1687d7937e930e3-if00-port0:/dev/ttyACM0
+
+  homeassistant:
+    container_name: homeassistant
+    image: "ghcr.io/home-assistant/home-assistant:stable"
+    volumes:
+      - ./homeassistant/config:/config
+      - /etc/localtime:/etc/localtime:ro
+      - /run/dbus:/run/dbus:ro
+    restart: unless-stopped
+    privileged: true
+    network_mode: host
