--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     image: koenkk/zigbee2mqtt:latest
     restart: always
     volumes:
-      - ./data:/app/data
+      - ./zigbee2mqtt/data:/app/data
       - /run/udev:/run/udev:ro
     ports:
       - 8080:8080
